tests/ui/basic/negate_non_number.rs
use metamatch::eval;

fn main() {
    eval! {
        -"hello"
    };
}
